packages/compiler/test/errors/temporal-dead-zone/read-before-decl/code.js
function f() {
  console.log(x);
  let x = 1;
}
